--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <div class="container header-inner">
-      <div class="brand">
+      <div class="brand" style="cursor:pointer" id="brandLogo">
         <img src="https://cdn-icons-png.flaticon.com/512/2503/2503508.png" alt="E-Shop" class="logo">
         <span class="brand-title">E-Shop</span>
       </div>
@@ -112,7 +112,7 @@
 
   <footer>
     <div class="container">
-      <span>&copy; 2025 E-Shop Demo.</span>
+      <span>&copy; 2025 E-Shop Demo. Inspired by Tiki, Shopee, Lazada.</span>
     </div>
   </footer>
   <script src="main.js"></script>
