fix add product

--- a/public/index.html
+++ b/public/index.html
@@ -112,7 +112,7 @@
 
   <footer>
     <div class="container">
-      <span>&copy; 2025 E-Shop Demo. Inspired by Tiki, Shopee, Lazada.</span>
+      <span>&copy; 2025 E-Shop Demo.</span>
     </div>
   </footer>
   <script src="main.js"></script>
